<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        tools:context=".view.DetailFragment">

        <LinearLayout
            android:id="@+id/book_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Image view for displaying book image-->
                <ImageView
                    android:id="@+id/bookImage"
                    android:layout_width="130dp"
                    android:layout_height="160dp"
                    android:layout_margin="18dp"
                    tools:src="@drawable/thumbnail_placeholder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <!--Text view for displaying publisher-->
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:padding="4dp"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!--text view for displaying number of pages-->
                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:maxLines="2"
                        android:padding="4dp"
                        android:text="@string/authors"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <!--text view for displaying publish date-->
                    <TextView
                        android:id="@+id/publishDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="4dp"
                        android:text="@string/publish_date"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

            <!--text view for displaying description, if available-->
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!--button for displaying preview-->
            <Button
                android:id="@+id/buttonWebReader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/web_link"
                android:textAllCaps="false" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>